2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-28  Michael Schlenker <mic42@users.sourceforge.net>
        
        * ldap.tcl      Nasty bug in ReceiveBytes, not detecting
                        partial results correctly.
        
2006-09-27  Michael Schlenker <mic42@users.sourceforge.net>
        
        * ldapx.test:   New test file for the ldapx entry functions.
                        Thanks to Pierre David for providing it.
                        
2006-09-26  Andreas Kupries  <andreask@activestate.com>

	* ldapx.man: Fixed ambigous subsection titles reported by Larry
	  Virden via [SF Tcllib Bug 1565836]. Additionally fixed a syntax
	  error (missing closed double-apostroph) in an example.

2006-09-24  Michael Schlenker <mic42@users.sourceforge.net>

	* ldap.tcl	Fixed bug in secure_connect. The
			channel wasn't fconfigured correctly and
			the fileevent handler was not installed
			in the correct way.

2006-09-22  Michael Schlenker <mic42@users.sourceforge.net>

	* ldap.test	Added some more smoketests for the public
			API, so that at least some brokenness is
			detected.

2006-09-20  Michael Schlenker <mic42@users.sourceforge.net>

        * ldap.tcl      Completly redone broken error handling in
          pkgIndex.tcl  the fileevent handler, now it no
          ldap.man      longer calls bgerror but cleans up
                        the outstanding messages for the
                        connection and delivers the error
                        to those waiting handlers. More stupid
                        typo fixes.

        * ldapx.tcl     Some bugfixes for error handling
          ldap.tcl      when searchInit is called with invalid
          ldap.man      arguments. Thanks to Pierre David 
          pkgIndex.tcl  <pdav@users.sourceforge.net> for finding
                        them.

2006-09-15  Michael Schlenker <mic42@users.sourceforge.net>
