@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[comment {$Id: ldapx.man,v 1.5 2006/09/26 16:46:37 andreas_kupries Exp $}]
-[manpage_begin ldapx n 0.2.2]
+[comment {$Id: ldapx.man,v 1.6 2006/10/09 04:49:17 mic42 Exp $}]
+[manpage_begin ldapx n 0.2.3]
 [copyright {2006 Pierre David <pdav@users.sourceforge.net>}]
 [moddesc   {LDAP extended object interface}]
 [titledesc {LDAP extended object interface}]
 [require Tcl 8.4]
-[require ldapx [opt 0.2.2]]
+[require ldapx [opt 0.2.3]]
 [description]
 [para]
 
