@@ -1,3 +1,10 @@
+2006-10-09  Michael Schlenker <mic42@users.sourceforge.net>
+
+        * ldapx.tcl     Fixed incorrect utf-8 conversion and
+                        broken ldif::write method.
+                        Thanks to Pierre David for providing
+                        the fix.
+                        
 2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
